syntax = "proto3";
import "./bytesBlock.proto";

message transportBlocks {
    repeated bytesBlock blocks = 1;
}
